k8s/production/basedatos-patch.yaml
apiVersion: apps/v1
kind: Pod
metadata:
  name: postgres-db
spec:
  template:
    spec:
      containers:
        - name: postgres
